--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -18,11 +19,93 @@
   <link rel="apple-touch-icon" href="/apple-touch-icon.png">
 
   <link rel="stylesheet" href="css/styles.css?v=1.0">
-
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 
 <body>
-  <!-- your content here... -->
+  <section id="title" class="colored">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-6 col-sm-12">
+          <h2>Future is now!</h2>
+        </div>
+        <div class="col-lg-6 col-sm-12">
+          <img src="images\Gearedwolf Avatar.png" alt="">
+        </div>
+      </div>
+    </div>
+  </section>
+  <section id="description">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-4 col-sm-12">
+          <p>Future is now!</p>
+        </div>
+        <div class="col-lg-4 col-sm-12">
+          <p>Future is now!</p>
+        </div>
+        <div class="col-lg-4 col-sm-12">
+          <p>Future is now!</p>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section id="projects" class="colored">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-4 col-sm-12">
+          <p>Future is now!</p>
+        </div>
+        <div class="col-lg-4 col-sm-12">
+          <p>Future is now!</p>
+        </div>
+        <div class="col-lg-4 col-sm-12">
+          <p>Future is now!</p>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section id="misc">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-4 col-sm-12">
+          <p>Future is now!</p>
+        </div>
+        <div class="col-lg-4 col-sm-12">
+          <p>Future is now!</p>
+        </div>
+        <div class="col-lg-4 col-sm-12">
+          <p>Future is now!</p>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section id="hobbies" class="colored">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-4 col-sm-12">
+          <p>Future is now!</p>
+        </div>
+        <div class="col-lg-4 col-sm-12">
+          <p>Future is now!</p>
+        </div>
+        <div class="col-lg-4 col-sm-12">
+          <p>Future is now!</p>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section id="contacts">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-4 col-sm-12">
+          <p>Future is now!</p>
+        </div>
+      </div>
+    </div>
+  </section>
   <script src="js/scripts.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
+
 </html>
