Update index.html and styles.css to update basic styles

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <h2>Future is now!</h2>
         </div>
         <div class="col-lg-6 col-sm-12">
-          <img src="images\Gearedwolf Avatar.png" alt="">
+          <img class="avatar" src="images\Gearedwolf Avatar.png" alt="">
         </div>
       </div>
     </div>
@@ -53,14 +53,37 @@
   <section id="projects" class="colored">
     <div class="container">
       <div class="row">
+        <div class="col-12">
+          <h2>Featured Projects</h2>
+        </div>
+      </div>
+      <div class="row">
         <div class="col-lg-4 col-sm-12">
-          <p>Future is now!</p>
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">Project 1</h5>
+              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
         </div>
         <div class="col-lg-4 col-sm-12">
-          <p>Future is now!</p>
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">Project 2</h5>
+              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
         </div>
         <div class="col-lg-4 col-sm-12">
-          <p>Future is now!</p>
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">Project 3</h5>
+              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
         </div>
       </div>
     </div>
@@ -83,14 +106,8 @@
   <section id="hobbies" class="colored">
     <div class="container">
       <div class="row">
-        <div class="col-lg-4 col-sm-12">
-          <p>Future is now!</p>
-        </div>
-        <div class="col-lg-4 col-sm-12">
-          <p>Future is now!</p>
-        </div>
-        <div class="col-lg-4 col-sm-12">
-          <p>Future is now!</p>
+        <div class="col-4">
+          <p>Hobbies</p>
         </div>
       </div>
     </div>
