Update all files to improve design

--- a/index.html
+++ b/index.html
@@ -27,13 +27,30 @@
 </head>
 
 <body>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top autohide">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">Portfolio</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+          <a class="nav-link" href="#projects">Projects</a>
+          <a class="nav-link" href="#misc">Misc</a>
+          <a class="nav-link" href="#hobbies">Hobbies</a>
+          <a class="nav-link" href="#contacts">Contacts</a>
+        </div>
+      </div>
+    </div>
+  </nav>
+
   <!-- Title Section -->
   <section id="title" class="colored">
     <div class="container content">
       <div class="row">
         <div class="col-lg-8 col-sm-12">
-          <h2>Future is now!</h2>
-          <p class="subtitle">Dreaming of a brighter future and learing the trade</p>
+          <h2>PMRAM Portfolio</h2>
+          <p class="subtitle">Dream big and aim for the stars!</p>
         </div>
         <div class="col-lg-4 col-sm-12">
           <img class="avatar" src="images\Gearedwolf Avatar.png" alt="">
@@ -47,14 +64,22 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-4 col-sm-12 description-box">
-          <h3>Continouos Growth</h3>
-          <p>Nascetur eu nibh vestibulum amet gravida nascetur praesent</p>
+          <div class="description-text">
+            <h3>Continouos Growth</h3>
+            <p>Nascetur eu nibh vestibulum amet gravida nascetur praesent</p>
+          </div>
         </div>
         <div class="col-lg-4 col-sm-12 description-box">
-          <p>Feugiat accumsan lorem eu ac lorem amet sed accumsan donec. Blandit orci porttitor semper. Arcu phasellus tortor enim mi nisi praesent dolor adipiscing. Integer mi sed nascetur cep aliquet augue varius tempus lobortis porttitor accumsan consequat adipiscing lorem dolor.</p>
+          <div class="description-text">
+            <p>Feugiat accumsan lorem eu ac lorem amet sed accumsan donec. Blandit orci porttitor semper. Arcu phasellus tortor enim mi nisi praesent dolor adipiscing. Integer mi sed nascetur cep aliquet augue varius tempus lobortis porttitor
+              accumsan consequat adipiscing lorem dolor.</p>
+          </div>
         </div>
         <div class="col-lg-4 col-sm-12 description-box">
-          <p>Morbi enim nascetur et placerat lorem sed iaculis neque ante adipiscing adipiscing metus massa. Blandit orci porttitor semper. Arcu phasellus tortor enim mi mi nisi praesent adipiscing. Integer mi sed nascetur cep aliquet augue varius tempus. Feugiat lorem ipsum dolor nullam.</p>
+          <div class="description-text">
+            <p>Morbi enim nascetur et placerat lorem sed iaculis neque ante adipiscing adipiscing metus massa. Blandit orci porttitor semper. Arcu phasellus tortor enim mi mi nisi praesent adipiscing. Integer mi sed nascetur cep aliquet augue varius
+              tempus. Feugiat lorem ipsum dolor nullam.</p>
+          </div>
         </div>
       </div>
     </div>
