Update styles to upgrade design

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             <div class="card-body">
               <h5 class="card-title">Morse Converter API</h5>
               <p class="card-text">Allows the conversion of a string in an equivalent string of morse code.</p>
-              <a href="https://github.com/pmram/MorseCodeConverter" class="btn btn-dark">Open in Github</a>
+              <a href="https://github.com/pmram/MorseCodeConverter" class="btn btn-dark btn-color">Open in Github</a>
             </div>
           </div>
         </div>
@@ -108,7 +108,7 @@
             <div class="card-body">
               <h5 class="card-title">Project 2</h5>
               <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-              <a href="#" class="btn btn-dark">Open in Github</a>
+              <a href="#" class="btn btn-dark btn-color">Open in Github</a>
             </div>
           </div>
         </div>
@@ -117,7 +117,7 @@
             <div class="card-body">
               <h5 class="card-title">Project 3</h5>
               <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-              <a href="#" class="btn btn-dark">Open in Github</a>
+              <a href="#" class="btn btn-dark btn-color">Open in Github</a>
             </div>
           </div>
         </div>
@@ -136,28 +136,31 @@
       <div class="row">
         <div class="col-lg-4 col-sm-12">
           <div class="card">
+            <img src="images\IMG_1360.JPG" class="card-img-top" alt="Modelling">
             <div class="card-body">
               <h5 class="card-title">Modelling</h5>
-              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="https://www.deviantart.com/leiborn" class="btn btn-clear">Find more...</a>
             </div>
           </div>
         </div>
         <div class="col-lg-4 col-sm-12">
           <div class="card">
+            <img src="..." class="card-img-top" alt="Animations">
             <div class="card-body">
               <h5 class="card-title">Animations</h5>
-              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="#" class="btn btn-clear">Find more...</a>
             </div>
           </div>
         </div>
         <div class="col-lg-4 col-sm-12">
           <div class="card">
+            <img src="images\drawing.jpg" class="card-img-top" alt="Drawing">
             <div class="card-body">
               <h5 class="card-title">Drawing</h5>
-              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="https://www.deviantart.com/leiborn" class="btn btn-clear">Find more...</a>
             </div>
           </div>
         </div>
@@ -169,10 +172,20 @@
   <section id="hobbies" class="colored">
     <div class="container">
       <div class="row">
-        <div class="col-lg-8 col-sm-0">
+        <div class="col-lg-8 col-sm-12 autohide-column">
         </div>
         <div class="col-lg-4 col-sm-12">
-          <p>Hobbies</p>
+          <h2 class="title-light">Hobbies</h2>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-lg-8 col-sm-12 description-box  autohide-column">
+        </div>
+        <div class="col-lg-4 col-sm-12 description-box">
+          <div class="description-text">
+            <p>Morbi enim nascetur et placerat lorem sed iaculis neque ante adipiscing adipiscing metus massa. Blandit orci porttitor semper. Arcu phasellus tortor enim mi mi nisi praesent adipiscing. Integer mi sed nascetur cep aliquet augue varius
+              tempus. Feugiat lorem ipsum dolor nullam.</p>
+          </div>
         </div>
       </div>
     </div>
