Add animations.html and associated changes

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&family=Spectral:wght@300&display=swap" rel="stylesheet">
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="css/styles.css?v=1.0">
 </head>
 
@@ -136,7 +137,7 @@
       <div class="row">
         <div class="col-lg-4 col-sm-12">
           <div class="card">
-            <img src="images\IMG_1360.JPG" class="card-img-top" alt="Modelling">
+            <img src="images\IMG_1360.JPG" class="card-img-top card-hide-image" alt="Modelling">
             <div class="card-body">
               <h5 class="card-title">Modelling</h5>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -146,17 +147,17 @@
         </div>
         <div class="col-lg-4 col-sm-12">
           <div class="card">
-            <img src="..." class="card-img-top" alt="Animations">
+            <img src="images\animation1.png" class="card-img-top card-hide-image" alt="Animations">
             <div class="card-body">
               <h5 class="card-title">Animations</h5>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-clear">Find more...</a>
+              <a href="animations.html" class="btn btn-clear">Find more...</a>
             </div>
           </div>
         </div>
         <div class="col-lg-4 col-sm-12">
           <div class="card">
-            <img src="images\drawing.jpg" class="card-img-top" alt="Drawing">
+            <img src="images\drawing.jpg" class="card-img-top card-hide-image" alt="Drawing">
             <div class="card-body">
               <h5 class="card-title">Drawing</h5>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
