--- a/animations.html
+++ b/animations.html
@@ -4,14 +4,13 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>A Basic HTML5 Template</title>
-  <meta name="description" content="A simple HTML5 Template for new projects.">
+  <title>PMRAM - Portfolio</title>
+  <meta name="description" content="Portfolio for PMRAM projects.">
   <meta name="author" content="SitePoint">
 
-  <meta property="og:title" content="A Basic HTML5 Template">
+  <meta property="og:title" content="PMRAM - Portfolio">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://www.sitepoint.com/a-basic-html5-template/">
-  <meta property="og:description" content="A simple HTML5 Template for new projects.">
+  <meta property="og:description" content="Portfolio for PMRAM projects.">
   <meta property="og:image" content="image.png">
 
   <link rel="icon" href="/favicon.ico">
