Updata final render and final text.

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
           <div class="card">
             <img src="images\IMG_1360.JPG" class="card-img-top card-hide-image" alt="Modelling">
             <div class="card-body">
-              <h5 class="card-title">Modelling</h5>
+              <h5 class="card-title">Modelling and Drawing</h5>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
               <a href="https://www.deviantart.com/leiborn" class="btn btn-clear">Find more...</a>
             </div>
@@ -157,11 +157,11 @@
         </div>
         <div class="col-lg-4 col-sm-12">
           <div class="card">
-            <img src="images\drawing.jpg" class="card-img-top card-hide-image" alt="Drawing">
+            <img src="images\IMG_7110.JPG" class="card-img-top card-hide-image" alt="Drawing">
             <div class="card-body">
-              <h5 class="card-title">Drawing</h5>
+              <h5 class="card-title">Photography</h5>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="https://www.deviantart.com/leiborn" class="btn btn-clear">Find more...</a>
+              <a href="https://www.flickr.com/people/193791541@N05/" class="btn btn-clear">Find more...</a>
             </div>
           </div>
         </div>
@@ -184,8 +184,7 @@
         </div>
         <div class="col-lg-4 col-sm-12 description-box">
           <div class="description-text">
-            <p>Morbi enim nascetur et placerat lorem sed iaculis neque ante adipiscing adipiscing metus massa. Blandit orci porttitor semper. Arcu phasellus tortor enim mi mi nisi praesent adipiscing. Integer mi sed nascetur cep aliquet augue varius
-              tempus. Feugiat lorem ipsum dolor nullam.</p>
+            <p>Cooking, reading and watching series and movies occupy my free time. Additionally, I have a passion for travelling and knowing the world.</p>
           </div>
         </div>
       </div>
@@ -196,16 +195,20 @@
   <section id="contacts">
     <div class="container">
       <h2 class="title-dark">Get In Touch</h2>
-      <h3>Lorem ipsum dolor sit amet, non elit.</h3>
-      <p>Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat.</p>
-      <a class="btn" href="mailto:name@gmail.com">CONTACT ME</a>
+      <p>Feel free to contact and follow in social media.</p>
+      <a class="btn" href="mailto:pmramaia.engmec@gmail.com">CONTACT ME</a>
     </div>
   </section>
 
   <div class="bottom-container">
-    <a class="footer-link" href="https://www.linkedin.com/in/pmramaia/">LinkedIn</a>
-    <a class="footer-link" href="https://github.com/pmram/">Github</a>
-    <p class="copyright">© 2022 Pedro Maia.</p>
+    <a class="footer-link" href="https://www.linkedin.com/in/pmramaia/"><i class="fa-brands fa-linkedin"></i></a>
+    <a class="footer-link" href="https://github.com/pmram/"><i class="fa-brands fa-github"></i></a>
+    <a class="footer-link" href="https://www.instagram.com/pedroramosmaia/"><i class="fa-brands fa-instagram"></i></a>
+    <a class="footer-link" href="https://www.flickr.com/people/193791541@N05/"><i class="fa-brands fa-flickr"></i></a>
+    <a class="footer-link" href="https://www.deviantart.com/leiborn"><i class="fa-brands fa-deviantart"></i></a>
+    <p class="copyright">
+      Pedro Maia © <span id="copyright-year">2022</span>
+    </p>
   </div>
 
   <script src="js/scripts.js"></script>
