Update index.html to include link to new portfolio project

--- a/index.html
+++ b/index.html
@@ -107,9 +107,9 @@
         <div class="col-lg-4 col-sm-12">
           <div class="card">
             <div class="card-body">
-              <h5 class="card-title">Project 2</h5>
-              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-              <a href="#" class="btn btn-dark btn-color">Open in Github</a>
+              <h5 class="card-title">Watermark Image</h5>
+              <p class="card-text">Desktop app in Tkinter to place watermark in images.</p>
+              <a href="https://github.com/pmram/WatermarkImage" class="btn btn-dark btn-color">Open in Github</a>
             </div>
           </div>
         </div>
